# Regent

./: .gitignore  ADDING_MODEL_SIZES.md  API.md  ARCHITECTURE.md  AUTHORS  DRONE_MARKET.md  LICENSE  NOTICE  QUICKSTART.md  README.md  pipeline.yaml  pyproject.toml  start.sh
configs/: regent_1_5b_edge.yaml  regent_370m.yaml  regent_3b_code.yaml  regent_7b.yaml  regent_code_test.yaml  regent_test.yaml
data/tokenizer/: regent.model  regent.vocab
docs/: index.html
docs/css/: style.css
dstp/: spec.md
market/: linkedin_article.md  linkedin_post.md  press_release.md  twitter_post.md
recipes/: README.md  chat-model.md  code-model.md
regent_model/: __init__.py
regent_model/blocks/: __init__.py  adaptive_gate.py  attention.py  mamba2.py
regent_model/encoder/: __init__.py  epg_encoder.py
regent_model/heads/: __init__.py  gen_head.py  ver_head.py
regent_model/layers/: __init__.py  model.py
regent_model/utils/: config.py  data.py  tokenizer.py
scripts/: export_model.py  generate_phase2_data.py  generate_phase3_data.py  generate_phase4_data.py  generate_test_corpus.py  modeling_regent.py  prepare_code_data.py  prepare_data.py  run_pipeline.py  scrape_corpus.py  tokenization_regent.py  train.py  train_phase2.py  train_phase3.py  train_phase4.py  train_phase5.py  train_tokenizer.py
serve/: generate.py  server.py
tests/: test_architecture.py
ui/: nuxt.config.js  package-lock.json  package.json  tailwind.config.js
ui/.nuxt/: App.js  axios.js  index.js  router.js  routes.json
ui/assets/: main.css
ui/layouts/: default.vue
website/: index.html
(+10 files in other folders)
